--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Lesson14d</title>
-  <link rel="stylesheet" href="lesson14d.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <div class="right-side">right sidebar</div>
